--- a/lightdm.conf
+++ b/lightdm.conf
@@ -120,7 +120,7 @@ session-wrapper=/etc/lightdm/Xsession
 autologin-user=aza
 #autologin-user-timeout=0
 #autologin-in-background=false
-autologin-session=xfce
+autologin-session=deepin
 #exit-on-failure=false
 
 #
